Week 5 Sprint code checkin

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,7 @@ MigrationBackup/
 /Week2Level2B
 /Week2Level2A
 /Week2Level1A
+/Exam1Challenge1
+/Week5Challenge1A
+/Week5Challenge1B
+/Week5Challenge2B
