Week 7 check-in

--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,8 @@ MigrationBackup/
 /Week5Challenge1A
 /Week5Challenge1B
 /Week5Challenge2B
+/FindTheBugsinCode
+/Week6Sprint1
+/Week6Sprint2/Properties/AssemblyInfo.cs
+/Week6Exercise1
+/Week6Sprint2
